--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 06:19:00 PM</p>
+    <p class="lastupdate">09/16/2020 06:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">84.1&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">84.1&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">84.1&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">41.1&#176;F</td>
+        <td class="data">40.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.896 inHg (-0.020)</td>
+        <td class="data">29.897 inHg (-0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph S (180&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 3 hours, 32 minutes</td>
+      <td class="data">15 days, 3 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 3 hours, 32 minutes</td>
+      <td class="data">15 days, 3 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
