--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 06:39:00 PM</p>
+    <p class="lastupdate">09/16/2020 06:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.5&#176;F</td>
+        <td class="data">82.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.9&#176;F</td>
+        <td class="data">42.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">23%</td>
+        <td class="data">25%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.899 inHg (-0.013)</td>
+        <td class="data">29.899 inHg (-0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph SSW (202&#176;)</td>
+        <td class="data">4 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.3&#176;F</td>
+        <td class="data">81.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 3 hours, 52 minutes</td>
+      <td class="data">15 days, 3 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 3 hours, 52 minutes</td>
+      <td class="data">15 days, 3 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
