--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 08:29:00 PM</p>
+    <p class="lastupdate">09/16/2020 08:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -151,13 +151,13 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">52.0<br/>
-            <span class="timestamp">08:27:20 PM</span><br/>
+          <td class="data new_row">53.6<br/>
+            <span class="timestamp">08:33:18 PM</span><br/>
             21.8<br/>
             <span class="timestamp">04:50:46 PM</span>
           </td>
-          <td class="data new_row">52.9<br/>
-            <span class="timestamp">11:14:17 AM (Monday)</span><br/>
+          <td class="data new_row">53.6<br/>
+            <span class="timestamp">08:33:18 PM (Wednesday)</span><br/>
             21.8<br/>
             <span class="timestamp">04:50:46 PM (Wednesday)</span>
           </td>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             2<br/>
-            192
+            193
           </td>
           <td class="data new_row">
             2<br/>
