--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 08:44:00 PM</p>
+    <p class="lastupdate">09/16/2020 08:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">74.2&#176;F</td>
+        <td class="data">73.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">74.2&#176;F</td>
+        <td class="data">73.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">74.2&#176;F</td>
+        <td class="data">73.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.3&#176;F</td>
+        <td class="data">55.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">50%</td>
+        <td class="data">52%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.942 inHg (0.038)</td>
+        <td class="data">29.939 inHg (0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNW (338&#176;)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="08:41:50 PM">
-            54.5</span><br/>
+          <span title="08:48:40 PM">
+            55.1</span><br/>
           <span title="04:50:46 PM">
             21.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="08:41:50 PM (Wednesday)">
-            54.5</span><br/>
+          <span title="08:48:40 PM (Wednesday)">
+            55.1</span><br/>
           <span title="04:50:46 PM (Wednesday)">
             21.8</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 5 hours, 57 minutes</td>
+      <td class="data">15 days, 6 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 5 hours, 57 minutes</td>
+      <td class="data">15 days, 6 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
