--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 10:39:00 PM</p>
+    <p class="lastupdate">09/16/2020 10:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -396,8 +396,8 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            36<br/>
-            <span class="timestamp">10:31:01 AM</span><br/>
+            37<br/>
+            <span class="timestamp">10:40:02 PM</span><br/>
             26<br/>
             <span class="timestamp">05:44:02 PM</span>
           </td>
